--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>TiffyAI Snake Game</title>
   <style>
     body {
-      background: url('backslot.jpg') no-repeat center center fixed;
+      background: url('stage1.jpg') no-repeat center center fixed;
       background-size: cover;
       margin: 0;
       padding: 0;
