--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       border: 4px solid #0ff;
       box-shadow: 0 0 25px #0ff;
       width: 95vw;
-      height: 85vh; /* ⬅️ slightly smaller so score + button show */
+      height: 85vh; /* your adjusted size */
       margin-top: 10px;
     }
 
@@ -55,8 +55,10 @@
   <div id="score-display">Score: 0.00 TIFFY</div>
   <button id="restart-btn" onclick="restartGame()">Restart</button>
 
-  <audio id="eatSound" src="eat.wav" preload="auto"></audio>
-  <audio id="gameOverSound" src="game-over.wav" preload="auto"></audio>
+  <!-- Updated sounds -->
+  <audio id="claimSound" src="claim.wav" preload="auto"></audio>
+  <audio id="gameOverSound" src="game-overs.wav" preload="auto"></audio>
+  <audio id="clickSound" src="click.wav" preload="auto"></audio>
 
   <script>
     const canvas = document.getElementById("game");
@@ -64,7 +66,7 @@
 
     function resizeCanvas() {
       canvas.width = window.innerWidth * 0.95;
-      canvas.height = window.innerHeight * 0.90; // match CSS
+      canvas.height = window.innerHeight * 0.85; // match CSS
     }
     resizeCanvas();
     window.addEventListener("resize", resizeCanvas);
@@ -81,8 +83,9 @@
     const foodImage = new Image();
     foodImage.src = "TiffyAI-Token.png";
 
-    const eatSound = document.getElementById("eatSound");
+    const claimSound = document.getElementById("claimSound");
     const gameOverSound = document.getElementById("gameOverSound");
+    const clickSound = document.getElementById("clickSound");
     const scoreDisplay = document.getElementById("score-display");
 
     let gameInterval = null;
@@ -94,10 +97,10 @@
       else if (event.key === "ArrowDown" && direction !== "UP") direction = "DOWN";
     }
 
-    // 📱 Gyroscope Tilt Controls
+    // 📱 Tilt Controls
     window.addEventListener("deviceorientation", function(event) {
-      let tiltLR = event.gamma; // left-right [-90,90]
-      let tiltFB = event.beta;  // front-back [-180,180]
+      let tiltLR = event.gamma; 
+      let tiltFB = event.beta;  
 
       if (Math.abs(tiltLR) > Math.abs(tiltFB)) {
         if (tiltLR > 15 && direction !== "LEFT") direction = "RIGHT";
@@ -111,12 +114,18 @@
     function draw() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
 
+      // Snake
       for (let i = 0; i < snake.length; i++) {
         ctx.fillStyle = (i === 0) ? "#00ffff" : "#00cccc";
         ctx.fillRect(snake[i].x, snake[i].y, box, box);
       }
 
-      ctx.drawImage(foodImage, food.x, food.y, box, box);
+      // Coin with glow effect
+      ctx.save();
+      ctx.shadowColor = "yellow";
+      ctx.shadowBlur = Math.random() * 40 + 20; // flashing glow
+      ctx.drawImage(foodImage, food.x, food.y, box * 2, box * 2); // double size
+      ctx.restore();
 
       let snakeX = snake[0].x;
       let snakeY = snake[0].y;
@@ -126,9 +135,12 @@
       if (direction === "RIGHT") snakeX += box;
       if (direction === "DOWN") snakeY += box;
 
-      if (snakeX === food.x && snakeY === food.y) {
+      if (
+        snakeX < food.x + box && snakeX + box > food.x &&
+        snakeY < food.y + box && snakeY + box > food.y
+      ) {
         score++;
-        eatSound.play();
+        claimSound.play();
         food = {
           x: Math.floor(Math.random() * (canvas.width / box)) * box,
           y: Math.floor(Math.random() * (canvas.height / box)) * box
@@ -161,6 +173,7 @@
     }
 
     function restartGame() {
+      clickSound.play();
       snake = [{ x: 9 * box, y: 10 * box }];
       direction = "RIGHT";
       score = 0;
